# reputation_checker

./: .gitignore  README.md  deployment-service-react.yaml
backend/: README.md  main.py  pyproject.toml
backend/mbti_classifier/: dataset_eda.py  main.py  mbti_classifier.py  predict.py  train.py  train_test_csv_maker.py
backend/mbti_classifier/output/: temp.txt
backend/tweet_search/: README.md  main.py  pyproject.toml
backend/wordcloud_generator/: kaixin.py
frontend/: .env  Dockerfile  package.json  startup.sh
frontend/react-ts-app/: package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: MbtiResult.tsx  SearchBox.tsx  TweetMbtiCard.tsx
frontend/src/mocks/: handlers.ts
frontend/src/mocks/data/: response.json  response_check_by_keyword.json  response_check_by_trend.json
frontend/src/pages/checkbykeyword/: CheckByKeyword.tsx
frontend/src/pages/checkbykeyword/api/: fetchReputationDataByKeyword.ts
frontend/src/pages/checkbysentence/: CheckBySentence.tsx
frontend/src/pages/checkbysentence/api/: fetchReputationDataBySentence.ts
frontend/src/pages/checkbytrend/: CheckByTrend.tsx
frontend/src/pages/checkbytrend/api/: fetchReputationDataByTrend.ts
frontend/src/types/: response.ts
